--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "immediate_mode_ui"
+name = "immediate_mode_gui"
 version = "0.1.0"
 authors = ["David Curthoys <david.curthoys@googlemail.com>"]
 
